syntax = "proto3";

package connectApp;
option go_package = "proto";

service GameRpcServer {
    rpc DeployScene(DeploySceneRequest) returns (DeploySceneReply) {}
    rpc RequestPlayer(RequestPlayerRequest) returns (RequestPlayerReply) {}
}

message DeploySceneRequest {
    string sceneId = 1;
}

message DeploySceneReply {
    bool success = 1;
}

message RequestPlayerRequest {
    string accountId = 1;
    bytes data = 2;
}

message RequestPlayerReply {
    bytes data = 1;
}
